lab1/Test/L1-A-5-63.cmm
struct Q RlQ ( int n ) {
  if ( - P1dXFyAxh996 = J2Ilm1EWUp ) ~  i4TKP1yiSq 
    

}
'